--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "next": "10.2.0",
+    "next-images": "^1.7.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-particles-js": "^3.4.1",
+    "react-scroll": "^1.8.2",
+    "react-tilt": "^0.1.4"
   }
 }
